<?xml version="1.0"?>
<package format="2">
  <name>extended_kalman_filter</name>
  <version>0.0.0</version>
  <description>The extended_kalman_filter package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>

  <build_depend>eigen3</build_depend>
  <exec_depend>eigen3</exec_depend>

  <export>
  </export>
</package>